@@ -86,8 +86,12 @@ Buy
 
 Set item quantity to 0 so the product is removed from the cart
 
-    >>> import sre
-    >>> regex = sre.compile("edit\..*?\.quantity")
+    >>> try:
+    ...     import re
+    ...     regex = re.compile("edit\..*?\.quantity")
+    ... except:
+    ...     import sre
+    ...     regex = sre.compile("edit\..*?\.quantity")
     >>> try:
     ...     editName = regex.findall(browser.contents)[0]
     ...     browser.getControl(name=editName).value = '0'
